Created basic angular application

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
----
+фищге---
 layout: layout
 title: "Posts"
 ---
@@ -12,7 +12,7 @@ title: "Posts"
     </p>
 
   <h1 class="thin">DOWNLOAD</h1>
-
+`
     <p>
 	  Until a package is ready, get the 
 	  <a href="https://github.com/metapolator/metapolator">
