slider automatation, and dat gui using

--- a/test/index.html
+++ b/test/index.html
@@ -35,7 +35,10 @@
             <div class="row">
             <div class="slider-menu" ng-controller="SliderCtrl">
                 <div class="sliders">
-                    <input id="sliderAB" font-slider />
+                   <div id="glyphSlider"></div>
+                    <div id="wordSlider"></div>
+                    <div id="paragraphSlider"></div>
+
                 </div>
             </div>
 
@@ -133,11 +136,10 @@
 <script type="text/javascript" src="app/js/instance.js"></script>
 <script type="text/javascript" src="app/js/bootstrap-slider.js"></script>
 <script type="text/javascript" src="app/js/opentype.js"></script>
+<script type="text/javascript" src="app/js/dat.gui.min.js"></script>
 
 
 <script>
-
-
 
 //$(document).ready(function(){
 //    var fonts = [
