/test/index.html: reword intro

--- a/test/index.html
+++ b/test/index.html
@@ -49,9 +49,10 @@
                             <p ng-bind="canvasInstances.interpolationValueAB"></p>
                                 <div class="lead col-md-11" style="text-align:left">
                                 <p>
-                                Metapolator is a font editor for designing typeface families. Many families vary only by weight, and even then only in a simple linear way, as above.
+                                Metapolator is a font editor for designing typeface families.
                                 </p>
                                 <p>
+                                Many families vary only by weight, and even then only in a simple linear way, as above.
                                 We wanted a way to draw fonts yet have the power of Metafont – a programming language for specifying typefaces with algorithms.
                                 </p>
                                 <p>
