--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="masthead clearfix">
         <div class="inner">
           <h1 class="masthead-brand col-md-1">
-            <span style="font-family: 'Roboto', sans-serif; font-weight: 700;">META</span><span style="font-family: 'Roboto', sans-serif; font-weight: 500;">PO</span><span style="font-family: 'Roboto', sans-serif; font-weight: 300;">LATOR</span>
+            <span style="font-family: 'Roboto', sans-serif; font-weight: 700;">Metapolator Examples</span> 
           </h1>
           <ul class="col-md-2 masthead-nav">
             <li><a href="http://github.com/metapolator/metapolator" title="Github"><span class="fa fa-github fa-lg"></span></a>   </li>
