--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
     <title>Metapolator: Font Family Creation</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <link href="http://getbootstrap.com/examples/starter-template/starter-template.css">
-    <link href="app/css/demo.css" rel="stylesheet">
+    <link href="app/css/demo_new.css" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="chrome-extension://cpngackimfmofbokmjmljamhdncknpmg/style.css">
     <script type="text/javascript" charset="utf-8" src="chrome-extension://cpngackimfmofbokmjmljamhdncknpmg/js/page_context.js"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
